Adding english comments

--- a/week2/Rate.ipynb
+++ b/week2/Rate.ipynb
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": null,
    "id": "5b5ade11",
    "metadata": {},
    "outputs": [
@@ -148,10 +148,10 @@
     "# Grilles\n",
     "E_v = np.linspace(0.1, 30, 1000)  # MeV\n",
     "E_R = np.linspace(0.1, 100, 500)  # keV\n",
-    "E_R_MeV = E_R * 1e-3  # pour les calculs en MeV\n",
+    "E_R_MeV = E_R * 1e-3  # E_R in MeV to calculate\n",
     "\n",
     "\n",
-    "# Calcul de dR/dER\n",
+    "# Computing dR/dER\n",
     "dRdER = []\n",
     "\n",
     "\n",
@@ -176,9 +176,9 @@
     "    rate = N * trapezoid(integrand, Ev_valid)\n",
     "    dRdER.append(rate)\n",
     "\n",
-    "# Tracé\n",
+    "# plotting\n",
     "plt.figure(figsize=(10, 6))\n",
-    "plt.plot(E_R, dRdER, color='blue')  # E_R en keV\n",
+    "plt.plot(E_R, dRdER, color='blue')  # E_R in keV\n",
     "plt.xscale('log')\n",
     "plt.yscale('log')\n",
     "plt.xlabel(\"Recoil Energy $E_R$ [keV]\")\n",
