Adding figures and normalizing rate

--- a/week2/Rate.ipynb
+++ b/week2/Rate.ipynb
@@ -140,20 +140,18 @@
    ],
    "source": [
     "# Constants\n",
-    "m_XLZD = 1  # tons of Xenon\n",
     "N_A = 6.022e23\n",
     "M_Xe = 131.29  # g/mol\n",
-    "N = m_XLZD * N_A / (M_Xe * 1e-6) #tons/mol\n",
+    "N = N_A / (M_Xe * 1e-6) #tons-1\n",
     "\n",
-    "# Grilles\n",
+    "# lists\n",
     "E_v = np.linspace(0.1, 30, 1000)  # MeV\n",
     "E_R = np.linspace(0.1, 100, 500)  # keV\n",
-    "E_R_MeV = E_R * 1e-3  # E_R in MeV to calculate\n",
+    "E_R_MeV = E_R * 1e-3  # E_R in MeV to calculate dsigma\n",
     "\n",
     "\n",
     "# Computing dR/dER\n",
     "dRdER = []\n",
-    "\n",
     "\n",
     "for Er in E_R_MeV:\n",
     "\n",
@@ -176,14 +174,16 @@
     "    rate = N * trapezoid(integrand, Ev_valid)\n",
     "    dRdER.append(rate)\n",
     "\n",
+    "Norm = trapezoid(dRdER, E_R)\n",
+    "\n",
     "# plotting\n",
     "plt.figure(figsize=(10, 6))\n",
-    "plt.plot(E_R, dRdER, color='blue')  # E_R in keV\n",
+    "plt.plot(E_R, dRdER/Norm, color='blue')  # E_R in keV\n",
     "plt.xscale('log')\n",
     "plt.yscale('log')\n",
     "plt.xlabel(\"Recoil Energy $E_R$ [keV]\")\n",
-    "plt.ylabel(r\"Differential Rate $\\frac{dR}{dE_R}$ [yr$^{-1}$ keV$^{-1}$]\")\n",
-    "plt.title(\"Differential CE$\\u03bd$NS Rate vs Recoil Energy $E_R$\")\n",
+    "plt.ylabel(r\"Differential Rate $\\frac{dR}{dE_R}$ [tons yr keV]$^{-1}$\")\n",
+    "plt.title(\"Differential CE$\\u03bd$NS Rate vs Recoil Energy $E_R$ (Normalized)\")\n",
     "plt.grid(True, which='both', linestyle='--', linewidth=0.5)\n",
     "plt.tight_layout()\n",
     "plt.show()\n",
