Addings from last week and defining functions for CEvNS

--- a/week1/SolarNeutrinoFlux.ipynb
+++ b/week1/SolarNeutrinoFlux.ipynb
@@ -265,7 +265,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "  \n",
-    "input_file = \"../dataflux/8B.tax\"\n",
+    "input_file = \"../dataflux/8B.dat\"\n",
     "\n",
     "# Initialiser les colonnes\n",
     "energy8B = []\n",
