--- a/week1/SolarNeutrinoFlux.ipynb
+++ b/week1/SolarNeutrinoFlux.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 9,
    "id": "d17c766f",
    "metadata": {},
    "outputs": [
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 10,
    "id": "00761984",
    "metadata": {},
    "outputs": [
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 11,
    "id": "9ef5da00",
    "metadata": {},
    "outputs": [
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 12,
    "id": "fb6ce28c",
    "metadata": {},
    "outputs": [
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 13,
    "id": "ca224970",
    "metadata": {},
    "outputs": [
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 14,
    "id": "17815a5f",
    "metadata": {},
    "outputs": [
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 15,
    "id": "e87e818f",
    "metadata": {},
    "outputs": [
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 16,
    "id": "486e5bab",
    "metadata": {},
    "outputs": [
@@ -605,10 +605,23 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Energy [MeV]  Total Flux [cm⁻²·s⁻¹·MeV⁻¹]\n",
+      "0       0.05000                 1.830315e+10\n",
+      "1       0.07998                 4.289698e+10\n",
+      "2       0.10996                 7.387527e+10\n",
+      "3       0.13994                 1.083146e+11\n",
+      "4       0.16992                 1.435111e+11\n"
+     ]
     }
    ],
    "source": [
     "from scipy.interpolate import interp1d\n",
+    "import pandas as pd\n",
     "\n",
     "plt.figure(figsize=(10, 6))\n",
     "\n",
@@ -675,7 +688,18 @@
     "plt.legend()\n",
     "plt.grid(True)\n",
     "plt.tight_layout()\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "df_total_flux = pd.DataFrame({\n",
+    "    \"Energy [MeV]\": arbitrary_energy,\n",
+    "    \"Total Flux [cm⁻²·s⁻¹·MeV⁻¹]\": total_flux\n",
+    "})\n",
+    "\n",
+    "# Afficher un aperçu\n",
+    "print(df_total_flux.head())\n",
+    "\n",
+    "# Sauvegarder en CSV si besoin\n",
+    "df_total_flux.to_csv(\"total_solar_flux.csv\", index=False)\n"
    ]
   },
   {
